Added instructions for WAN replication